--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "oh-vue-icons": "^1.0.0-rc3",
+    "primeicons": "^6.0.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
